--- a/Client/style.css
+++ b/Client/style.css
@@ -3,30 +3,10 @@ html , body{
     height: 100%;
     background-color: #393E46;
     color: #EEEEEE; 
+    margin: 0 0 0 0;
 }
 
-/* .canvasContainer{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-canvas{
-    border: 1px solid black;
-    width: 400px;
-    height: 400px;;
-} */
-
-/* .gameContainer{
-    background-color: red;
-    width: 300px;
-    height: 300px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-} */
 .game{
-    /* background-color: #222831; */
     width: 500px;
     height: 500px;
     display: grid;
